--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -37,9 +37,10 @@
         <%= render partial: "hearts/button", locals: {post: post} %>
         <% end %>
         <div class="col-xs-4 center-block">
-          <%= link_to post do %>
-          <%= icon('comments',style:'font-size:2rem;',class:"btn" ) %>
-          <% end %>
+            <%= button_to post_path(post), class:"btn" do %>
+              <%= icon('comment',style:'font-size:2rem') %>
+              <span class="badge"><%= post.comments.count %></span>
+            <% end %>
         </div>
         <div class="col-xs-4 center-block">
 
