--- a/app/views/profiles/_profile_info.html.erb
+++ b/app/views/profiles/_profile_info.html.erb
@@ -48,8 +48,8 @@
 
   <!-- Nav tabs -->
   <ul class="nav nav-pills" role="tablist">
-    <li role="presentation" class="active"><a href="#tab1" aria-controls="tab1" role="tab" data-toggle="tab">Publicaciones</a></li>
-    <li role="presentation"><a href="#tab2" aria-controls="tab2" role="tab" data-toggle="tab"><%= @profile.offer_section_name %></a>
+    <li role="presentation"><a href="#tab1" aria-controls="tab1" role="tab" data-toggle="tab">Publicaciones</a></li>
+    <li role="presentation" class="active"><a href="#tab2" aria-controls="tab2" role="tab" data-toggle="tab"><%= @profile.offer_section_name %></a>
     </li>
 
     <li role="presentation"><a href="#tab3" aria-controls="tab3" role="tab" data-toggle="tab">Galería</a>
