--- a/app/views/menus/search/_profile.html.erb
+++ b/app/views/menus/search/_profile.html.erb
@@ -1,4 +1,4 @@
-    <div class="col-sm-6 col-md-4">
+    <div class="col-sm-6 col-md-12">
         <div class="thumbnail">
             <%= link_to image_tag(profile.avatar(), class:"promo-img responsive-img",lazy:true), profile %>
             <div class="caption center">
@@ -7,10 +7,11 @@
                 <div class="star-rating" data-score=<%= profile.reviews.average(:rating) %>></div>
                 <em><%= "#{profile.reviews.length} valoraciones" %></em><br>
                 <p>
-                    <%= truncate(profile.body ) %><br>
+                    <%= profile.body.truncate_words(10) %><br>
                     <b>Dirección:
                     </b><%= profile.direccion %>
                 </p>
+                <p><%= link_to "Ver Mas", profile, class:"btn btn-success " %></p>
             </div>
         </div>
     </div>
