--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 <div class="tab-content">
-  <div role="tabpanel" class="tab-pane active container" style="max-width:700px;" id="tab1">
+  <div role="tabpanel" class="tab-pane container" style="max-width:700px;" id="tab1">
 
     <% if my_profile?(@profile) %>
     <br>
@@ -29,19 +29,20 @@
     <% end %>
   </div>
 
-  <div role="tabpanel" class="tab-pane container" id="tab2">
+  <div role="tabpanel" class="tab-pane active container" id="tab2">
     <% if user_signed_in? %>
     <% if current_user.id == @profile.user_id %><br>
-    <%= link_to "Publicar Oferta", new_offer_path, class:"btn teal right" %><br>
+    <%= link_to "Publicar Oferta", new_offer_path, class:"btn btn-default" %><br>
     <% end %>
     <% end %>
 
-    <%= if @offers.present? then
-     render @offers 
-      else
-        content_tag(:div, "No hay contenido para mostrar", class:"h3")
-     end 
-    %>
+    <% if @offers.present? %>
+      <% @offers.each do |offer| %>
+          <%= render partial:'offers/offer_small', locals:{offer: offer} %>
+        <% end %>
+      <% else %>
+        <%= content_tag(:div, "No hay contenido para mostrar", class:"h3") %>
+   <% end %> 
    </div>
 
    <div role="tabpanel" class="tab-pane container" id="tab3">
