--- a/app/views/categories/_profiles.html.erb
+++ b/app/views/categories/_profiles.html.erb
@@ -2,7 +2,7 @@
     <div class="thumbnail">
         <%= link_to image_tag(profile.avatar(), class:"promo-img responsive-img"), profile %>
         <div class="caption center">
-            <b><%= profile.name %></b>
+            <b><%= profile.name %><%= veryfied?(profile) %></b>
             <br>
             <div class="star-rating" data-score=<%= profile.reviews.average(:rating) %>></div>
             <em><%= "#{profile.reviews.length} valoraciones" %></em><br>
