--- a/app/views/menus/_profiles.erb
+++ b/app/views/menus/_profiles.erb
@@ -7,7 +7,7 @@
                 <%= link_to image_tag(profile.avatar(), class:"circle responsive-img"), profile %>
             </div>
             <div class="col s7">
-                <b><%= profile.name %></b>
+                <b><%= profile.name %> <%= veryfied?(profile) %></b>
                 <br>
                 <div class="star-rating" data-score=<%= profile.reviews.average(:rating) %>></div>
                 <em><%= "#{profile.reviews.length} valoraciones" %></em><br>
