--- a/app/views/partners/show.html.erb
+++ b/app/views/partners/show.html.erb
@@ -1,13 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Type:</strong>
-  <%= @partner.partner_range %>
-</p>
-
-<p>
-  <strong>User:</strong>
-  <%= @partner.user %>
+  <strong>Profile:</strong>
+  <%= @partner.profile %>
 </p>
 
 <%= link_to 'Edit', edit_partner_path(@partner) %> |
