--- a/app/views/partners/_form.html.erb
+++ b/app/views/partners/_form.html.erb
@@ -2,8 +2,7 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :partner_range %>
-    <%= f.association :user %>
+    <%= f.association :profile %>
   </div>
 
   <div class="form-actions">
