--- a/app/views/partners/index.html.erb
+++ b/app/views/partners/index.html.erb
@@ -5,8 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>Type</th>
-      <th>User</th>
+      <th>Profile</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,8 +13,7 @@
   <tbody>
     <% @partners.each do |partner| %>
       <tr>
-        <td><%= partner.partner_range %></td>
-        <td><%= partner.user %></td>
+        <td><%= partner.profile %></td>
         <td><%= link_to 'Show', partner %></td>
         <td><%= link_to 'Edit', edit_partner_path(partner) %></td>
         <td><%= link_to 'Destroy', partner, method: :delete, data: { confirm: 'Are you sure?' } %></td>
