--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,12 +1,23 @@
 <%= simple_form_for(@post, html: {multipart: true}) do |f| %>
-  <%= f.input :body, label:"Descripción", as: :text %>
-  <p>
-    <%= file_field_tag "images[]", type: :image, multiple: true %>
-  </p>
-  <p>
-    Agrega un video(Opcional)
-  </p>
-  <%= f.input :video, placeholder:"URL del video de YouTube" %>
-
-  <%= f.submit "Publicar", class:"btn btn-lg btn-success" %>
+<div class="modal fade" tabindex="-1" role="dialog" id="modal_post">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				<h4 class="modal-title">Pulicacón Rápida</h4>
+			</div>
+			<div class="modal-body">
+				<%= f.input :body, label:"Descripción", as: :text %>
+				<p>
+					Agrega un video(Opcional)
+				</p>
+				<%= f.input :video, placeholder:"URL del video de YouTube" %>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+				<%= f.submit "Publicar", class:"btn btn-success" %>
+			</div>
+		</div><!-- /.modal-content -->
+	</div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 <% end %>
