--- a/app/views/welcome/_promo_profiles.html.erb
+++ b/app/views/welcome/_promo_profiles.html.erb
@@ -24,6 +24,8 @@
         </div>
     </div>
     <% end %>
+    <% else %>
+    <div class="alert-alert-warning">No hay contenido para mostrar</div>
     <% end %>
 </div>
 
