--- a/app/views/profiles/_profile_info.html.erb
+++ b/app/views/profiles/_profile_info.html.erb
@@ -28,6 +28,7 @@
           </p>
 
           <span><%= @profile.body %></span><br>
+          <span><b>Direccion: </b><%= @profile.direccion %></span>
           <table class="table">
             <thead class="center">
               <th class="center">Seguidores</th>
