--- a/app/views/offers/_offer.html.erb
+++ b/app/views/offers/_offer.html.erb
@@ -6,6 +6,7 @@
       <h3> <%= offer.titulo %> </h3>
 
       <p><%= offer.descripcion.truncate_words(10) %></p>
+      <p><b>Dreicción: </b><%= offer.profile.direccion %></p>
       
       <b>Precio: </b>
       
