--- a/app/views/coupons/_form.html.erb
+++ b/app/views/coupons/_form.html.erb
@@ -1,14 +1,14 @@
 <%= simple_form_for @coupon do |f| %>
-<div class="flex-row">
-	<div class="col-xs-4">
+<div class="row">
+	<div class="col-xs-6">
 		<%= f.input :code, label:"Código" %>
 	</div>
-	<div class="col-xs-8">
+	<div class="col-xs-6">
 		<%= f.input :description, label:"Descripción" %>
 	</div>
 </div>
 
-<div class="flex-row">
+<div class="row">
 	<div class="col-xs-6">
 		<%= f.input :amount, label: "Cantidad de descuento(porciento)", input_html: { min: '1', max:'100', step: 'any' }  %>
 	</div>
@@ -17,7 +17,7 @@
 	</div>
 </div>
 
-<div class="flex-row">
+<div class="row">
 	<div class="col-xs-6">
 		<%= f.input :valid_from, label: "Válido desde", as: :date,html5: true, input_html: {class:"datepicker"}%>
 	</div>
