--- a/app/views/coupons/new.html.erb
+++ b/app/views/coupons/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Coupon</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', coupons_path %>
+<div class="container">
+	<h4>Crear un Cupón de descuento</h4>
+		<div class="row">
+			<div class="col-xs-8 col-xs-offset-2">
+						<%= render 'form' %>
+			</div>
+		</div>
+	<%= link_to 'Volver', coupons_path %>
+</div>
