--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,18 +16,18 @@
       <%= f.input :password_confirmation, label:"Confirmar Contraseña", required: true %>
     </div>
 
-    <div class="form-actions">
-      <%= f.button :submit, "Crear Cuenta!", class:"btn btn-success" %>
+  <div class="row">
+    <div class="col-xs-2">
+      <%= f.button :submit, "Crear Cuenta", class:"btn btn-success" %>
     </div>
     <% end %>
-    
-    <br>
 
-    <div class="center" style="max-width: 220px">
+    <div class="col-xs-4">
       <%= link_to user_facebook_omniauth_authorize_path, class:"btn btn-block btn-social btn-facebook" do %>
       <span class="fa fa-facebook"></span> Iniciar con Facebook
       <% end %>
     </div>
+  </div>
 
 
     <%= render "devise/shared/links" %>
