--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,29 +1,29 @@
-<%- if controller_name != 'sessions' %>
-  <%= link_to "Iniciar Sesión", new_session_path(resource_name), class:"btn btn-primary" %><br />
+<div class="center">
+  <%- if controller_name != 'sessions' %>
+  <%= link_to "Iniciar Sesión", new_session_path(resource_name)%><br />
   <br>
-<% end -%>
+  <% end -%>
 
+</div>
 
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Registrarse!", new_registration_path(resource_name), class:"btn btn-primary" %><br />
-  <br>
-<% end -%>
-
-
-<%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "¿Olvidaste tu contraseña?", new_password_path(resource_name), class:"btn btn-primary" %><br />
-  <br>
-<% end -%>
+<div class="center">
+  <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+  <%= link_to "Registrarse!", new_registration_path(resource_name) %> |
+  <% end -%>
+  <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
+  <%= link_to "¿Olvidaste tu contraseña?", new_password_path(resource_name)%>
+  <% end -%>
+</div>
 
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <%= link_to "¿No has recibido el correo de confirmación?", new_confirmation_path(resource_name), class:"btn btn-primary" %><br />
-  <br>
+<%= link_to "¿No has recibido el correo de confirmación?", new_confirmation_path(resource_name), class:"btn btn-primary" %><br />
+<br>
 <% end -%>
 
 
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-  <%= link_to "¿No has recibido el correo para desbloquear?", new_unlock_path(resource_name), class:"btn btn-primary" %><br />
-  <br>
+<%= link_to "¿No has recibido el correo para desbloquear?", new_unlock_path(resource_name), class:"btn btn-primary" %><br />
+<br>
 <% end -%>
 
