--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,53 +14,153 @@
 
 <header>
 
-  <nav id="bootstrap-menu" class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Navegación</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/"><b>Live</b></a>
-      </div>
+  <!-- Navigation bar -->
+  <nav class="sidenav" style="margin-top: 50px;" data-sidenav data-sidenav-toggle="#sidenav-toggle">
+    <div class="sidenav-brand">
+      BRAND
+    </div>
 
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li><a href="/">Inicio</a></li>
-          <li><%= link_to("Descubrir", categories_path) %></li>
-          <li><%= link_to("Favoritos", favorites_path) %></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Opciones <span class="caret"></span></a>
-            <ul class="dropdown-menu white-text">
-              <li><%= if user_signed_in? then link_to("Mi Perfil", myprofile_path) 
-                  else link_to("Iniciar Sesión", new_user_session_path)
-                end %></li>
-              <!-- Check for session -->
-              <li role="separator" class="divider"></li>
-              <li><%= if user_signed_in? then link_to('Cerrar Sesión', destroy_user_session_path, method: :delete, data:{confirm: "¿Quieres Cerrar tu Sessión Actual?"}) end %></li>
-              <li><%= link_to "Empresas", new_profile_path %></li>
+    <div class="sidenav-header">
+      Section Header
+      <small>secondary text</small>
+    </div>
 
-              <li><a href="#">Ayuda</a></li>
-              <%= link_to_panel %>
-            </ul>
-          </li>
+    <ul class="sidenav-menu">
+      <li>
+        <a href="javascript:;" data-sidenav-dropdown-toggle class="active">
+          <span class="sidenav-link-icon">
+            <i class="material-icons">store</i>
+          </span>
+          <span class="sidenav-link-title">Lorem ipsum</span>
+          <span class="sidenav-dropdown-icon show" data-sidenav-dropdown-icon>
+            <i class="material-icons">arrow_drop_down</i>
+          </span>
+          <span class="sidenav-dropdown-icon" data-sidenav-dropdown-icon>
+            <i class="material-icons">arrow_drop_up</i>
+          </span>
+        </a>
+
+        <ul class="sidenav-dropdown" data-sidenav-dropdown>
+          <li><a href="javascript:;">Dolor sit amet</a></li>
+          <li><a href="javascript:;">Consectetur adipisicing</a></li>
+          <li><a href="javascript:;">Elit</a></li>
         </ul>
-        <%= form_tag("/search", method: "get", class:"navbar-form navbar-right" ) do %>
-        <div class="form-group"><%= text_field_tag :query, params[:query], placeholder: "Buscar ejem:'Comida C$200'",class:"form-control"%>
-        </div>
-        <%= submit_tag "Buscar", class:"btn btn-default" %>
-        <% end %>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
+      </li>
+      <li>
+        <a href="javascript:;" data-sidenav-dropdown-toggle>
+          <span class="sidenav-link-icon">
+            <i class="material-icons">payment</i>
+          </span>
+          <span class="sidenav-link-title">Sed do eiusmod</span>
+          <span class="sidenav-dropdown-icon show" data-sidenav-dropdown-icon>
+            <i class="material-icons">arrow_drop_down</i>
+          </span>
+          <span class="sidenav-dropdown-icon" data-sidenav-dropdown-icon>
+            <i class="material-icons">arrow_drop_up</i>
+          </span>
+        </a>
+
+        <ul class="sidenav-dropdown" data-sidenav-dropdown>
+          <li><a href="javascript:;">Tempor incididunt</a></li>
+          <li><a href="javascript:;">Labore</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="javascript:;" data-sidenav-dropdown-toggle>
+          <span class="sidenav-link-icon">
+            <i class="material-icons">shopping_cart</i>
+          </span>
+          <span class="sidenav-link-title">Dolore magna</span>
+          <span class="sidenav-dropdown-icon show" data-sidenav-dropdown-icon>
+            <i class="material-icons">arrow_drop_down</i>
+          </span>
+          <span class="sidenav-dropdown-icon" data-sidenav-dropdown-icon>
+            <i class="material-icons">arrow_drop_up</i>
+          </span>
+        </a>
+
+        <ul class="sidenav-dropdown" data-sidenav-dropdown>
+          <li><a href="javascript:;">Aliqua</a></li>
+          <li><a href="javascript:;">Exercitation</a></li>
+          <li><a href="javascript:;">Minim veniam</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="javascript:;">
+          <span class="sidenav-link-icon">
+            <i class="material-icons">assignment_ind</i>
+          </span>
+          <span class="sidenav-link-title">Nostrud ullamco</span>
+        </a>
+      </li>
+      <li>
+        <a href="javascript:;">
+          <span class="sidenav-link-icon">
+            <i class="material-icons">alarm</i>
+          </span>
+          <span class="sidenav-link-title">Commodo</span>
+        </a>
+      </li>
+    </ul>
+
+    <div class="sidenav-header">
+      Another Section Header
+    </div>
+
+    <ul class="sidenav-menu">
+      <li>
+        <a href="javascript:;" data-sidenav-dropdown-toggle>
+          <span class="sidenav-link-icon">
+            <i class="material-icons"><a href="http://www.jqueryscript.net/time-clock/">date</a>_range</i>
+          </span>
+          <span class="sidenav-link-title">Reprehenderit</span>
+          <span class="sidenav-dropdown-icon show" data-sidenav-dropdown-icon>
+            <i class="material-icons">arrow_drop_down</i>
+          </span>
+          <span class="sidenav-dropdown-icon" data-sidenav-dropdown-icon>
+            <i class="material-icons">arrow_drop_up</i>
+          </span>
+        </a>
+
+        <ul class="sidenav-dropdown" data-sidenav-dropdown>
+          <li><a href="javascript:;">Voluptate</a></li>
+          <li><a href="javascript:;">Excepteur</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="javascript:;">
+          <span class="sidenav-link-icon">
+            <i class="material-icons">backup</i>
+          </span>
+          <span class="sidenav-link-title">Occaecat</span>
+        </a>
+      </li>
+      <li>
+        <a href="javascript:;">
+          <span class="sidenav-link-icon">
+            <i class="material-icons">settings</i>
+          </span>
+          <span class="sidenav-link-title">Deserunt</span>
+        </a>
+      </li>
+    </ul>
   </nav>
+  <!-- Navigation bar -->
 
 </header>
 <body>
 
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+      <a href="javascript:;" class="toggle navbar-brand" id="sidenav-toggle">
+        <span class="glyphicon glyphicon-th" aria-hidden="true"></span>
+      </a>
+          <div class="center">
+           <%= link_to(image_tag('logo-black-simple-text.png', alt:"Nicaragua Live"), root_path, class:"navbar-brand-logo") %>
+          </div>
+
+    </div>
+  </nav>
 
 
   <% if notice %>
@@ -89,5 +189,8 @@
       return $(this).attr('data-score');
     }
   });
+
+  $('[data-sidenav]').sidenav();
 </script>
 </html>
+
