--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,134 +16,14 @@
 
   <!-- Navigation bar -->
   <nav class="sidenav" style="margin-top: 50px;" data-sidenav data-sidenav-toggle="#sidenav-toggle">
-    <div class="sidenav-brand">
-      BRAND
-    </div>
-
+    <%= render 'welcome/user_tabs' %>
     <div class="sidenav-header">
-      Section Header
-      <small>secondary text</small>
+      <%= form_tag(search_path, method: "get", remote: false, id: "search-form") do %>
+      <%= text_field_tag :query, params[:query], placeholder: "Buscar...",class:"form", style:"max-width: 100%;" %>
+      <%= submit_tag "Buscar", class:"btn btn-small" %>
+      <% end %>
     </div>
 
-    <ul class="sidenav-menu">
-      <li>
-        <a href="javascript:;" data-sidenav-dropdown-toggle class="active">
-          <span class="sidenav-link-icon">
-            <i class="material-icons">store</i>
-          </span>
-          <span class="sidenav-link-title">Lorem ipsum</span>
-          <span class="sidenav-dropdown-icon show" data-sidenav-dropdown-icon>
-            <i class="material-icons">arrow_drop_down</i>
-          </span>
-          <span class="sidenav-dropdown-icon" data-sidenav-dropdown-icon>
-            <i class="material-icons">arrow_drop_up</i>
-          </span>
-        </a>
-
-        <ul class="sidenav-dropdown" data-sidenav-dropdown>
-          <li><a href="javascript:;">Dolor sit amet</a></li>
-          <li><a href="javascript:;">Consectetur adipisicing</a></li>
-          <li><a href="javascript:;">Elit</a></li>
-        </ul>
-      </li>
-      <li>
-        <a href="javascript:;" data-sidenav-dropdown-toggle>
-          <span class="sidenav-link-icon">
-            <i class="material-icons">payment</i>
-          </span>
-          <span class="sidenav-link-title">Sed do eiusmod</span>
-          <span class="sidenav-dropdown-icon show" data-sidenav-dropdown-icon>
-            <i class="material-icons">arrow_drop_down</i>
-          </span>
-          <span class="sidenav-dropdown-icon" data-sidenav-dropdown-icon>
-            <i class="material-icons">arrow_drop_up</i>
-          </span>
-        </a>
-
-        <ul class="sidenav-dropdown" data-sidenav-dropdown>
-          <li><a href="javascript:;">Tempor incididunt</a></li>
-          <li><a href="javascript:;">Labore</a></li>
-        </ul>
-      </li>
-      <li>
-        <a href="javascript:;" data-sidenav-dropdown-toggle>
-          <span class="sidenav-link-icon">
-            <i class="material-icons">shopping_cart</i>
-          </span>
-          <span class="sidenav-link-title">Dolore magna</span>
-          <span class="sidenav-dropdown-icon show" data-sidenav-dropdown-icon>
-            <i class="material-icons">arrow_drop_down</i>
-          </span>
-          <span class="sidenav-dropdown-icon" data-sidenav-dropdown-icon>
-            <i class="material-icons">arrow_drop_up</i>
-          </span>
-        </a>
-
-        <ul class="sidenav-dropdown" data-sidenav-dropdown>
-          <li><a href="javascript:;">Aliqua</a></li>
-          <li><a href="javascript:;">Exercitation</a></li>
-          <li><a href="javascript:;">Minim veniam</a></li>
-        </ul>
-      </li>
-      <li>
-        <a href="javascript:;">
-          <span class="sidenav-link-icon">
-            <i class="material-icons">assignment_ind</i>
-          </span>
-          <span class="sidenav-link-title">Nostrud ullamco</span>
-        </a>
-      </li>
-      <li>
-        <a href="javascript:;">
-          <span class="sidenav-link-icon">
-            <i class="material-icons">alarm</i>
-          </span>
-          <span class="sidenav-link-title">Commodo</span>
-        </a>
-      </li>
-    </ul>
-
-    <div class="sidenav-header">
-      Another Section Header
-    </div>
-
-    <ul class="sidenav-menu">
-      <li>
-        <a href="javascript:;" data-sidenav-dropdown-toggle>
-          <span class="sidenav-link-icon">
-            <i class="material-icons"><a href="http://www.jqueryscript.net/time-clock/">date</a>_range</i>
-          </span>
-          <span class="sidenav-link-title">Reprehenderit</span>
-          <span class="sidenav-dropdown-icon show" data-sidenav-dropdown-icon>
-            <i class="material-icons">arrow_drop_down</i>
-          </span>
-          <span class="sidenav-dropdown-icon" data-sidenav-dropdown-icon>
-            <i class="material-icons">arrow_drop_up</i>
-          </span>
-        </a>
-
-        <ul class="sidenav-dropdown" data-sidenav-dropdown>
-          <li><a href="javascript:;">Voluptate</a></li>
-          <li><a href="javascript:;">Excepteur</a></li>
-        </ul>
-      </li>
-      <li>
-        <a href="javascript:;">
-          <span class="sidenav-link-icon">
-            <i class="material-icons">backup</i>
-          </span>
-          <span class="sidenav-link-title">Occaecat</span>
-        </a>
-      </li>
-      <li>
-        <a href="javascript:;">
-          <span class="sidenav-link-icon">
-            <i class="material-icons">settings</i>
-          </span>
-          <span class="sidenav-link-title">Deserunt</span>
-        </a>
-      </li>
-    </ul>
   </nav>
   <!-- Navigation bar -->
 
@@ -155,24 +35,24 @@
       <a href="javascript:;" class="toggle navbar-brand" id="sidenav-toggle">
         <span class="glyphicon glyphicon-th" aria-hidden="true"></span>
       </a>
-          <div class="center">
-           <%= link_to(image_tag('logo-black-simple-text.png', alt:"Nicaragua Live"), root_path, class:"navbar-brand-logo") %>
-          </div>
+      <div class="center">
+       <%= link_to(image_tag('logo-black-simple-text.png', alt:"Nicaragua Live"), root_path, class:"navbar-brand-logo") %>
+     </div>
 
-    </div>
-  </nav>
+   </div>
+ </nav>
 
 
-  <% if notice %>
-  <div class="alert alert-danger alert-dismissible navbar-fixed-top" role="alert">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    <%= notice %>
-  </div>
-  <% end %>
+ <% if notice %>
+ <div class="alert alert-danger alert-dismissible navbar-fixed-top" role="alert">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <%= notice %>
+</div>
+<% end %>
 
-  <%= yield%>
+<%= yield%>
 
-  <a href="#" class="back-to-top center"><%= icon('chevron-up') %></a>
+<a href="#" class="back-to-top center"><%= icon('chevron-up') %></a>
 
 
 
