--- a/app/views/coupons/_form.html.erb
+++ b/app/views/coupons/_form.html.erb
@@ -2,29 +2,31 @@
 <div class="panel-body">
   <%= simple_form_for(@coupon) do |f| %>
     <%= f.error_notification %>
-
       <div class="form-inputs">
         <div class="row">
-          <div class="col-xs-12">
-            <%= f.input :title %>
+          <div class="col-lg-12">
+            <%= f.input :title, label:"Título"%>
+          </div>
+          <div class="col-lg-12">
+            <%= f.input :description, label:"Detalles" %>
+          </div>
+          <div class="col-lg-3 col-sm-6 col-sm-3">
+            <%= f.input :ammount, label:"Descuento %", input_html: { min: '1', step: 'any' } %>
+          </div>
+          <div class="col-lg-3 col-sm-6 col-sm-3">
+            <%= f.input :max_redemptions, label:"N° Máximo", input_html: { min: '0', step: 'any' } %>
+          </div>
+          <div class="col-lg-6">
+            <%= f.input :code, label:"Código" %>
+          </div>
+          <div class="col-lg-6">
+            <%= f.input :start_date, as: :date_time_picker, label:"Fecha Inicio" %>
+          </div>
+          <div class="col-lg-6">
+            <%= f.input :end_date, as: :date_time_picker, label:"Fecha Final" %>
           </div>
           <div class="col-xs-12">
-            <%= f.input :description %>
-          </div>
-          <div class="col-xs-4">
-            <%= f.input :ammount %>
-          </div>
-          <div class="col-xs-4">
-            <%= f.input :max_redemptions %>
-          </div>
-          <div class="col-xs-4">
-            <%= f.input :code %>
-          </div>
-          <div class="col-xs-6">
-            <%= f.input :start_date, as: :date_time_picker %>
-          </div>
-          <div class="col-xs-6">
-            <%= f.input :end_date, as: :date_time_picker %>
+            <%= f.input :picture, label:"Imagen", as: :file %>
           </div>
         </div>
       </div>
@@ -47,4 +49,28 @@
       format: 'mm-dd-yyyy'
     });
   });
+
+/*
+	GENERATE RANDOM CODES FOR COUPONS
+*/
+function randomString(length) {
+    var result = '';
+	var chars = "0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ"
+    for (var i = length; i > 0; --i) result += chars[Math.round(Math.random() * (chars.length - 1))];
+    return result;
+}
+
+//But first let me take the key word
+function getFirstWord(str) {
+        if (str.indexOf(' ') === -1)
+            return str;
+        else
+            return str.substr(0, str.indexOf(' '));
+    };
+
+//Finaly assign the value
+$('#coupon_title').keyup(function(){
+    var a = $(this).val();
+	$('#coupon_code').val(getFirstWord(a).toUpperCase()+'-'+randomString(4));
+});
 </script>
