--- a/app/views/coupons/index.html.erb
+++ b/app/views/coupons/index.html.erb
@@ -1,41 +1,10 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Coupons</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Ammount</th>
-      <th>Max redemptions</th>
-      <th>Code</th>
-      <th>Start date</th>
-      <th>End date</th>
-      <th>Profile</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @coupons.each do |coupon| %>
-      <tr>
-        <td><%= coupon.title %></td>
-        <td><%= coupon.description %></td>
-        <td><%= coupon.ammount %></td>
-        <td><%= coupon.max_redemptions %></td>
-        <td><%= coupon.code %></td>
-        <td><%= coupon.start_date %></td>
-        <td><%= coupon.end_date %></td>
-        <td><%= coupon.profile %></td>
-        <td><%= link_to 'Show', coupon %></td>
-        <td><%= link_to 'Edit', edit_coupon_path(coupon) %></td>
-        <td><%= link_to 'Destroy', coupon, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Coupon', new_coupon_path %>
+<div class="container">
+<div class="page-header">
+  <h3 class="center">Cupones</h3>
+</div>
+  <% @coupons.each do |coupon| %>
+    <div class="col-lg-4 <col-sm-6></col-sm-6>">
+      <%= render partial: '/coupons/coupon', locals:{coupon: coupon} %>
+    </div>
+  <% end %>
+</div>
