--- a/app/views/coupons/new.html.erb
+++ b/app/views/coupons/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-    <h4>Crear Cupón</h4>
+    <h4 class="center">Crear Cupón</h4>
 <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
     <%= render 'form', coupon: @coupon %>    
 </div>
