--- a/app/views/coupons/show.html.erb
+++ b/app/views/coupons/show.html.erb
@@ -39,6 +39,8 @@
   <strong>Profile:</strong>
   <%= @coupon.profile %>
 </p>
+<%= link_to "Reclamar Cupon", coupon_redemptions_path(user_id: current_user.id, coupon_id: @coupon.id), method: 'post' %>
+<br>  
 
 <%= link_to 'Edit', edit_coupon_path(@coupon) %> |
 <%= link_to 'Back', coupons_path %>
