--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,9 +6,6 @@
 @import "bootstrap";
 @import 'form';
 @import 'profile';
-@import 'bootstrap-social';
-@import 'owl.carousel';
-@import 'owl.theme';
-@import 'owl.transitions';
-@import "social-share-button";
+@import 'owl.carousel.min';
+@import 'owl.theme.default.min';
 @import 'sidenav.min';
