--- a/app/views/coupons/_coupon.html.erb
+++ b/app/views/coupons/_coupon.html.erb
@@ -1,7 +1,15 @@
+
+<div class="item" style="width:0 auto" id="coupon_<%= coupon.id %>">
 <div class="panel panel-primary">
   <div class="panel-heading"> <%= coupon.title %> </div>
-  <div class="panel-body wrapper" style="background-image:url('<%= coupon.picture.url %>'); min-height: 200px;"x>
-      <div class="ribbon-wrapper-green">
+  <div class="panel-body wrapper" style="min-height: 200px;">
+  
+  <div class="background-img">
+    <%= image_tag coupon.picture, lazy:true, style:"z-index:900", class:"responsive-img" %>  
+  </div>
+  
+  <div style="z-index:950">
+        <div class="ribbon-wrapper-green">
         <div class="ribbon-green">
             <%=coupon.ammount%>%
         </div>
@@ -11,18 +19,26 @@
             <%= coupon.description %>            
         </div>
     </div>
+  </div>
 
   </div>
   <div class="panel-footer">
-  <div class="row">
-    <div class="col-xs-8">
+  <div class="row panel-success">
+    <div class="col-xs-6">
     <strong>Cupones disponibles: </strong><em><%= coupon.max_redemptions %></em>
     <br>
     <strong>Valido hasta: </strong><em><%= humanize_date(coupon.end_date) %></em>
   </div>
-  <div class="col-xs-4 center">
-        <%= link_to "Reclamar", coupon_redemptions_path(user_id: current_user.id, coupon_id: coupon.id), class:"btn btn-success", method: :post %>
+  <div class="col-xs-6 center">
+    <%= coupon_buttons(coupon) %>
   </div>
+</div>
   </div>
 </div>
 </div>
+
+<style>
+.background-img {
+max-width:100%;
+}
+</style>
