--- a/app/views/coupons/index.html.erb
+++ b/app/views/coupons/index.html.erb
@@ -2,9 +2,13 @@
 <div class="page-header">
   <h3 class="center">Cupones</h3>
 </div>
-  <% @coupons.each do |coupon| %>
-    <div class="col-lg-4 <col-sm-6></col-sm-6>">
+
+  <div class="row">
+    <% @coupons.each do |coupon| %>
+    <div class="col-sm-6 col-md-4 col-lg-4">
       <%= render partial: '/coupons/coupon', locals:{coupon: coupon} %>
     </div>
   <% end %>
+  </div>
+
 </div>
