--- a/app/views/coupons/show.html.erb
+++ b/app/views/coupons/show.html.erb
@@ -39,7 +39,7 @@
   <strong>Profile:</strong>
   <%= @coupon.profile %>
 </p>
-<%= link_to "Reclamar Cupon", coupon_redemptions_path(user_id: current_user.id, coupon_id: @coupon.id), method: 'post' %>
+<%= link_to "Reclamar Cupon", coupon_redemptions_path(user_id: current_user.id, coupon_id: @coupon.id), method: 'post', remote: true %>
 <br>  
 
 <%= link_to 'Edit', edit_coupon_path(@coupon) %> |
