--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,24 +12,9 @@
   <meta name="google-site-verification" content="yJ5C5gpFv43Wcqxgl6z9wANka2YjJPNNP9Nt5oTreZY" />
 </head>
 
-<header>
-
-  <!-- Navigation bar -->
-  <nav class="sidenav" style="margin-top: 50px;" data-sidenav data-sidenav-toggle="#sidenav-toggle">
-    <%= render 'welcome/user_tabs' %>
-    <div class="sidenav-header">
-      <%= form_tag(search_path, method: "get", remote: false, id: "search-form") do %>
-      <%= text_field_tag :query, params[:query], placeholder: "Buscar...",class:"form", style:"max-width: 100%;" %>
-      <%= submit_tag "Buscar", class:"btn btn-small" %>
-      <% end %>
-    </div>
-
-  </nav>
-  <!-- Navigation bar -->
-
-</header>
 <body>
 
+<!--
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <a href="javascript:;" class="toggle navbar-brand" id="sidenav-toggle">
@@ -42,7 +27,7 @@
    </div>
  </nav>
 
-
+-->
  <% if notice %>
  <div class="alert alert-danger alert-dismissible navbar-fixed-top" role="alert">
   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -50,7 +35,114 @@
 </div>
 <% end %>
 
-<%= yield%>
+<div class="row">
+    <!-- uncomment code for absolute positioning tweek see top comment in css -->
+    <!-- <div class="absolute-wrapper"> </div> -->
+    <!-- Menu -->
+    <div class="side-menu">
+
+    <nav class="navbar navbar-default" role="navigation">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+        <div class="brand-wrapper">
+            <!-- Hamburger -->
+            <button type="button" class="navbar-toggle">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+
+            <!-- Brand -->
+            <div class="brand-name-wrapper">
+                <a class="navbar-brand" href="<%= root_path %>">
+                    <%= image_tag('logo-black-simple-text.png', style:"width:150px;") %>
+                </a>
+            </div>
+
+            <!-- Search -->
+            <a data-toggle="collapse" href="#search" class="btn btn-default" id="search-trigger">
+                <span class="glyphicon glyphicon-search"></span>
+            </a>
+
+            <!-- Search body -->
+            <div id="search" class="panel-collapse collapse">
+                <div class="panel-body">
+                    <form class="navbar-form" role="search">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Search">
+                        </div>
+                        <button type="submit" class="btn btn-default "><span class="glyphicon glyphicon-ok"></span></button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- Main Menu -->
+    <div class="side-menu-container">
+        <ul class="nav navbar-nav">
+          <% if user_signed_in? %>
+            <li><a href="<%= profile_path(current_user.profile) %>"><span class="glyphicon glyphicon-signal"></span> Mi Pefil</a></li>
+          <% end %>
+            <li><a href="<%= coupons_path %>"><span class="glyphicon glyphicon-send"></span> Cupones</a></li>
+            <li class="active"><a href="<%= offers_path %>"><span class="glyphicon glyphicon-plane"></span> Ofertas</a></li>
+            <li><a href="<%= partners_path %>"><span class="glyphicon glyphicon-cloud"></span> Socios</a></li>
+<%#
+dasdasd
+
+
+            <!-- Dropdown-->
+            <li class="panel panel-default" id="dropdown">
+                <a data-toggle="collapse" href="#dropdown-lvl1">
+                    <span class="glyphicon glyphicon-user"></span> Sub Level <span class="caret"></span>
+                </a>
+
+                <!-- Dropdown level 1 -->
+                <div id="dropdown-lvl1" class="panel-collapse collapse">
+                    <div class="panel-body">
+                        <ul class="nav navbar-nav">
+                            <li><a href="#">Link</a></li>
+                            <li><a href="#">Link</a></li>
+                            <li><a href="#">Link</a></li>
+
+                            <!-- Dropdown level 2 -->
+                            <li class="panel panel-default" id="dropdown">
+                                <a data-toggle="collapse" href="#dropdown-lvl2">
+                                    <span class="glyphicon glyphicon-off"></span> Sub Level <span class="caret"></span>
+                                </a>
+                                <div id="dropdown-lvl2" class="panel-collapse collapse">
+                                    <div class="panel-body">
+                                        <ul class="nav navbar-nav">
+                                            <li><a href="#">Link</a></li>
+                                            <li><a href="#">Link</a></li>
+                                            <li><a href="#">Link</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </li>
+%>
+            <li><a href="<%= categories_path %>"><span class="glyphicon glyphicon-signal"></span> Categorías</a></li>
+
+        </ul>
+    </div><!-- /.navbar-collapse -->
+</nav>
+
+    </div>
+
+    <!-- Main Content -->
+    <div class="container-fluid">
+        <div class="side-body" style="margin-top:1%;">
+          <%= yield%>
+        </div>
+    </div>
+</div>
+
 
 <a href="#" class="back-to-top center"><%= icon('chevron-up') %></a>
 
@@ -70,7 +162,5 @@
     }
   });
 
-  $('[data-sidenav]').sidenav();
 </script>
 </html>
-
