--- a/app/views/welcome/_promo_profiles.html.erb
+++ b/app/views/welcome/_promo_profiles.html.erb
@@ -7,7 +7,7 @@
             <div class="caption center">
                 <b><%= profile.name %> <%= veryfied?(profile) %> </b>
                 <br>
-                <div class="star-rating" data-score=<%= profile.reviews.average(:rating) %>></div>
+                <div class="star-rating star-carousel" data-score=<%= profile.reviews.average(:rating) %>></div>
                 <em><%= "#{profile.reviews.length} valoraciones" %></em><br>
                 <p>
                     <%= truncate(profile.body ) %><br>
@@ -28,5 +28,3 @@
     <div class="alert-alert-warning">No hay contenido para mostrar</div>
     <% end %>
 </div>
-
-
